@@ -1,0 +1,98 @@
+// -*- C++ -*- Time-stamp: <06/10/10 22:07:21 ptr>
+
+/*
+ * Copyright (c) 2006
+ * Petr Ovtchenkov
+ *
+ * Licensed under the Academic Free License version 3.0
+ *
+ */
+
+#include "Echo.h"
+
+#include <stem/NetTransport.h>
+#include <stem/EvManager.h>
+
+#include <boost/test/unit_test.hpp>
+
+using namespace boost::unit_test_framework;
+
+using namespace stem;
+
+StEMecho::StEMecho()
+{
+}
+
+StEMecho::StEMecho( addr_type id ) :
+    EventHandler( id )
+{
+}
+
+StEMecho::StEMecho( addr_type id, const char *info ) :
+    EventHandler( id, info )
+{
+}
+
+void StEMecho::echo( const Event& ev )
+{
+  Event eev( ev.code() );
+  eev.value() = ev.value();
+
+  eev.dest( ev.src() );
+
+  Send( eev );
+}
+
+void StEMecho::regme( const stem::Event& ev )
+{
+  stem::NetTransport_base *b = manager()->transport( ev.src() );
+  if ( b != 0 ) {
+    b->make_map( ev.src(), (ev.value() /* + who_is( ev.src() ) */ ).c_str() );
+  }
+}
+
+DEFINE_RESPONSE_TABLE( StEMecho )
+  EV_EDS( 0, NODE_EV_ECHO, echo )
+  EV_EDS( 0, 0x5001, regme )
+END_RESPONSE_TABLE
+
+EchoClient::EchoClient() :
+    EventHandler(),
+    mess( "echo string" )
+{
+  cnd.set( false );
+}
+
+EchoClient::EchoClient( stem::addr_type id ) :
+    EventHandler( id ),
+    mess( "echo string" )
+{
+  cnd.set( false );
+}
+
+EchoClient::EchoClient( stem::addr_type id, const char *info ) :
+    EventHandler( id, info ),
+    mess( "echo string" )
+{
+  cnd.set( false );
+}
+
+EchoClient::~EchoClient()
+{
+  // cnd.wait();
+}
+
+void EchoClient::handler1( const stem::Event& ev )
+{
+  BOOST_CHECK( ev.value() == mess );
+  cnd.set(true);
+}
+
+void EchoClient::wait()
+{
+  cnd.try_wait();
+}
+
+DEFINE_RESPONSE_TABLE( EchoClient )
+  EV_EDS(0,NODE_EV_ECHO,handler1)
+END_RESPONSE_TABLE
